# openzerg

./: .gitignore  Cargo.toml  build.rs  flake.nix  update_procedure.md
modules/: openzerg.nix
proto/: agent.proto
src/: cli.rs  config.rs  connection.rs  error.rs  file_server.rs  git_manager.rs  lib.rs  main.rs  protocol.rs  sse.rs  stats_collector.rs  task_runner.rs  ws_client.rs
src/agent/: core.rs  handlers.rs  mod.rs
src/agent/prompts/: agent.md  soul.md
src/agent/prompts/sessions/: dispatcher.md  main.md  query.md  task.md  worker.md
src/api_server/: handlers.rs  mod.rs  routes.rs  state.rs  types.rs
src/event/: dispatcher.rs  mod.rs
src/file/: manager.rs  mod.rs  types.rs
src/grpc/: handler.rs  mod.rs
src/llm/: client.rs  mod.rs  types.rs
src/process/: executor.rs  manager.rs  mod.rs  systemd_executor.rs  types.rs
src/provider/: manager.rs  mod.rs  types.rs
src/rpc/: mod.rs  protocol.rs  registry.rs
src/rpc/handler/: activity.rs  message.rs  mod.rs  process.rs  session.rs  task.rs  tool.rs
src/session/: manager.rs  mod.rs  processor.rs  types.rs
src/storage/: mod.rs  types.rs
src/task/: manager.rs  mod.rs  types.rs
src/thinking/: mod.rs  planner.rs
src/thinking/prompts/: planner.md
src/tool/: bash.rs  batch.rs  executor.rs  glob.rs  grep.rs  ls.rs  mod.rs  read.rs  registry.rs  schema.rs  traits.rs  truncation.rs  webfetch.rs  write.rs
src/tool/edit/: diff.rs  levenshtein.rs  mod.rs  replacer.rs  tool.rs
src/tool/prompts/: bash.md  bash.txt  batch.txt  edit.md  edit.txt  glob.md  glob.txt  grep.md  grep.txt  ls.txt  read.md  read.txt  webfetch.txt  write.md  write.txt
src/vision/: client.rs  mod.rs  types.rs
src/web/: handlers.rs  mod.rs  routes.rs  templates.rs  utils.rs
templates/: config.html  dashboard.html  layout.html  provider_form.html  providers.html  session_detail.html
tests/: api_integration.rs  event_integration.rs  session_task_integration.rs
