[package]
name = "openzerg"
version = "0.5.0"
edition = "2021"

[lib]
name = "openzerg"
path = "src/lib.rs"

[[bin]]
name = "openzerg"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

tokio-tungstenite = "0.27"
futures-util = "0.3"

sysinfo = "0.35"
walkdir = "2"
sha2 = "0.10"

reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio-stream = "0.1"
async-trait = "0.1"
async-stream = "0.3"

tonic = "0.12"
prost = "0.13"

clap = { version = "4", features = ["derive", "env"] }

schemars = "0.8"
regex = "1"
glob = "0.3"
diff = "0.1"
base64 = "0.22"
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io", "codec"] }
dirs = "6"
tempfile = "3.10"
axum = "0.8"
askama = "0.12"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
